Updates for console